fixed header spacing, reset editform when close

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -89,6 +89,6 @@ body {
   }
 
   .header button {
-    display: none;
+    /* display: none; */
   }
 }
